[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itksnap-dss"
version = "0.1.0"
authors = [
  { name="Paul Yushkevich", email="pyushkevich@gmail.com" },
]
description = "Python client for ITK-SNAP Distributed Segmentation Service (DSS)"
dependencies = [
  'httpx>=0.23.0',
  'pandas>=1.3.0',
  'keyring>=23.0.0',
  'tqdm>=4.60.0',
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["medical imaging", "segmentation", "ITK-SNAP", "DSS", "service provider"]

[project.urls]
Homepage = "https://alfabis-server.readthedocs.io/en/latest/"